<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item android:id="@+id/nav_category"
        android:icon="@drawable/ic_category"
        android:title="@string/category"/>

    <item android:id="@+id/nav_more_menu"
        android:icon="@drawable/ic_more_menu"
        android:title="@string/more"/>

    <item android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification"/>

    <item android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>

</menu>